He añadido estilos nuevos, hovers...

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 			  <meta name="name" content="Examen final de Master" />
-			  <meta name="description" content="Nahuel y Dave nos han puesto un examen sorpresa sorpresa"
+			  <meta name="description" content="Nahuel y Dave nos han puesto un examen sorpresa sorpresa">
 
 			  
 		</head>
@@ -28,7 +28,7 @@
 						</div>
 
 						<div class="claim">
-							<p> Awesome travels agengy - We take you everywhere </p>
+							<p> <strong> Awesome travels agengy </strong> - We take you everywhere </p>
 
 						</div>
 
@@ -72,26 +72,26 @@
 				<section class="tercera">
 
 						<div class="box">
-							<h3> Price </h3>
-							<p> picture / nice room </p>
+							<h3> Price <br> - </h3>
+							<p> Nice room </p>
 							<p> text: #exclusive #confortable #service #classic #hotels</p>
 						</div>
 
 						<div class="box">
-							<h3> We travel where there is great food </h3>
-							<p> picture / nice room </p>
+							<h3> We love real food <br> - </h3>
+							<p> Nice food </p>
 							<p> text: #exclusive #confortable #service #classic #hotels</p>
 						</div>
 
 						<div class="box">
-							<h3> Gastronomic hotels </h3>
-							<p> picture / nice room </p>
+							<h3> Gastronomic hotels <br> - </h3>
+							<p> Wow food </p>
 							<p> text: #exclusive #confortable #service #classic #hotels</p>
 						</div>
 
 						<div class="box">
-							<h3> Book in advance </h3>
-							<p> picture / nice room </p>
+							<h3> Book in advance <br> - </h3>
+							<p> Save time and money </p>
 							<p> text: #exclusive #confortable #service #classic #hotels</p>
 
 						</div>
