--- a/index.html
+++ b/index.html
@@ -73,26 +73,22 @@
 
 						<div class="box">
 							<h3> Price <br> - </h3>
-							<p> Nice room </p>
-							<p> text: #exclusive #confortable #service #classic #hotels</p>
+							<p> #exclusive #confortable #service #classic #hotels</p>
 						</div>
 
 						<div class="box">
 							<h3> We love real food <br> - </h3>
-							<p> Nice food </p>
-							<p> text: #exclusive #confortable #service #classic #hotels</p>
+							<p> #apellation #localseafood #incraiabal #super</p>
 						</div>
 
 						<div class="box">
 							<h3> Gastronomic hotels <br> - </h3>
-							<p> Wow food </p>
-							<p> text: #exclusive #confortable #service #classic #hotels</p>
+							<p> #ohlalá #jemapeleluà #quetala #hotels</p>
 						</div>
 
 						<div class="box">
 							<h3> Book in advance <br> - </h3>
-							<p> Save time and money </p>
-							<p> text: #exclusive #confortable #service #classic #hotels</p>
+							<p> #always #hope #you #loose #time #on #this</p>
 
 						</div>
 
