Christian y Eloi corrección

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 								<li> bookings </li>
 							</ul>
 
+							<ul class="menu-mobile">
+							<span>MENU</span>
+								<li> home </li>
+								<li> destinations </li>
+								<li> bookings </li>
+							</ul>
+
 						</nav>
 
 				</div>
